tests/paczka1/fuzzy1/40528569.err
Error in line 5: hDq7H A104 37,0
Error in line 20: Fy9xj S390 61,1
Error in line 12: S953 S720 75,7
Error in line 35: Fy9xj S953 70,3
